- fixed gitignore - version bump for JDK from 8 to 15 (!!) - fixed Ognl upstream usage, now DynaManipulator works with latest upstream OgnlRuntime instead of my older fork - changed interactive cli library from jline to Text IO - migration completed from joda.time to java.time - version bump for all the libraries and major revisiting of the pom